adjusted highlight size to stop overlap of adminbuttons

--- a/src/App.css
+++ b/src/App.css
@@ -869,8 +869,8 @@ form {
   }
 
   .highlight {
-    width: 1500px;
-    height: 844px;
+    width: 1404px;
+    height: 790px;
   }
 
   .cams-container {
